Fixed Performance issue - Method invokes inefficient Number constructor; use static valueOf instead. Replaced (new Integer(number)).toString().contains("3") with Integer.valueOf(number).toString().contains("3").