@@ -1,11 +1,9 @@
 package com.wubinben.kata.fizzbuzz;
 
 /**
- * Created with IntelliJ IDEA.
  * User: Ben
  * Date: 13-12-18
  * Time: 下午7:04
- * To change this template use File | Settings | File Templates.
  */
 public class CommonNumberHandler extends WordHandler {
     public CommonNumberHandler(WordHandler wordHandler) {
@@ -14,6 +12,6 @@ public class CommonNumberHandler extends WordHandler {
 
     @Override
     public Word handle(int number) {
-        return new Word((new Integer(number)).toString());
+        return new Word(Integer.valueOf(number).toString());
     }
 }
